spade-tests/src/snapshots/spade_tests__integration__trait_tests__multiple_same_named_methods_errors.snap
---
source: spade-tests/src/integration.rs
---
struct X {}
impl X {
    fn test(self) -> bool {true}
}
impl X {
    fn test(self) -> bool {false}
}

fn main(x: X) -> bool {
    x.test()
}


error: X already has a method named test
  ┌─ testinput:6:5
  │
3 │     fn test(self) -> bool {true}
  │     ---------------------------- Previous definition here
  ·
6 │     fn test(self) -> bool {false}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate method


